Notes: Currently 3 bugs: 1. Graphs have a margin to the right, which i think has something to do with the way they are rendered and the order which they are rendered and the size of the window which thy are rendered in. This means that the tables don't split in the middle and everything looks mis-aligned. 2. The "caption" in the right and middle grid boxes aren't in the center even though it is center aligned with margin auto. 3. When resized small enough, logo overlays ackknowledgements. Maybe impliment an automaitc size change when window siz changes or something.
Other than that, buttons work (link needs adding for second button) and looks pretty.

--- a/web/Styles.css
+++ b/web/Styles.css
@@ -11,10 +11,10 @@ body {
 .grid-container {
   display: grid;
   grid-template-areas: 
-    'header header' 
-    'left right' 
-    'middle middle'
-    'footer footer';
+      'header header' 
+      'left right' 
+      'middle middle' 
+      'footer footer';
   grid-column-gap: 10px; /*gap between the columns */
 } 
 
@@ -34,6 +34,7 @@ body {
 .caption{
     position:absolute;
     text-align: center;
+
     bottom: 0%;
 }
 
@@ -56,7 +57,7 @@ body {
 .right {
   grid-area: right;
   border-radius: 12px;
-  position: relative;
+
 }
 
 /* Style the footer */
@@ -140,19 +141,18 @@ h1 {
     }
 
 #gauge_div {
-    width: 70%; 
-    height: 80%;
-    margin: 0 auto;
+    display: inline-block;
+    margin: auto;
+    height:80%;
+    text-align: center;
+
 }
+
 #curve_chart {
     height: 70%;
     width: 100%;
     margin: auto;
     border: 2px solid #295159; 
-    position: absolute;
-
 }
 
-curve_chart:first-child {
 
-}
